# flowchat_transcript_ai

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/core/: config.py
src/dashboard/: app.py  callbacks.py  layout.py
src/services/: media_processor.py
