[project]
name = "flowchart-resume-ai"
version = "0.1.0"
description = "IA Media Processor: Transcripción con Whisper y Generación de Diagramas con Gemini 2.0 Flash"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jaime Gabriel Campillay Rojas" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "pydantic-settings>=2.4.0",
    "google-generativeai>=0.8.0",
    "google-genai>=1.0.0",
    "yt-dlp>=2025.1.0",
    "openai-whisper>=20240930",
    "pedalboard>=0.9.0",
    "soundfile>=0.12.0",
    "moviepy>=2.0.0",
    "diagrams>=0.24.0",
    "graphviz>=0.20.0",
    "python-dotenv>=1.0.0",
    "polars>=1.0.0",
    "torch>=2.0.0",
]

# --- CAMBIO AQUÍ: La nueva forma de declarar dependencias de desarrollo ---
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ya no es necesario el bloque [tool.uv] para las dev-dependencies antiguas
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]